--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ websockets
 protobuf
 ctranslate2<=3.24.0 # last version compatible with CUDA 11
 colorama
-openai==1.35.9
+openai
 httpx==0.27.2 # stop before blocking change in 0.28.0
 open_clip_torch
 safetensors
